# speculative-plan-pr-reporter-resource

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
.reuse/: dep5
.reuse/templates/: python-header.jinja2
ci/: pipeline.yml
ci/tasks/: unit-tests.sh  unit-tests.yml
concourse_terraform_plan_pr_reporter_resource/: __init__.py  _version.py  check.py  git_utils.py  in  in.py  logger.py  markdown_reporter.py  out.py  settings.py
concourse_terraform_plan_pr_reporter_resource/conf/: settings.py
docs/dev/: settings.md
tests/: __init__.py  constants.py  test_markdown_reporter.py  test_out.py
tests/resources/: test-input.json
tests/resources/markdown-outputs/: simple-plan.md
tests/resources/terraform-plans/: plan.json
