[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "DevX CD"}]
description = "A Concourse resource to generate a report from a speculative terraform plan."
dynamic = ["version", "readme"]
license = {"file" = "LICENSE"}
name = "concourse_terraform_plan_pr_reporter_resource"
dependencies = [
  "markdown-table-generator",
  "pydantic",
  "requests",
  "terraformer"
]

[project.optional-dependencies]
dev = [
  "black",
  "build",
  "dapperdata",
  "glom",
  "isort",
  "mypy",
  "pip-tools",
  "pytest",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "toml-sort"
]

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.env
    | _build
    | buck-out
    | build
    | dist
    | concourse_terraform_plan_pr_reporter_resource/_version.py
  )
)
'''
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
skip = [".venv"]
src_paths = ["concourse_terraform_plan_pr_reporter_resource", "tests"]

[tool.pytest.ini_options]
pythonpath = [
  "concourse_terraform_plan_pr_reporter_resource"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
concourse_terraform_plan_pr_reporter_resource = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "concourse_terraform_plan_pr_reporter_resource/_version.py"
